# CCC

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: CNAME  firstboot.sh  index.html  install-ccc.sh
src/ccc/: __init__.py  __main__.py  _version.py  cli.py
src/ccc/commands/: __init__.py  bootstrap_system.py
src/ccc/commands/phases/: __init__.py  apt.py  editor.py  locale.py
src/ccc/roles/: __init__.py  base.py  pmdesk.py
src/ccc/system/: __init__.py  audit_log.py  i18n.py  marker.py  pkg.py  whiptail.py
src/ccc/system/self_heal/: __init__.py  constants.py  dpkg.py  pro_notice.py  safe_purge.py
tests/: test_cli.py
tests/commands/: test_bootstrap_system.py
tests/commands/phases/: test_apt.py  test_editor.py  test_locale.py
tests/system/: test_audit_log.py  test_i18n.py  test_marker.py  test_pkg.py  test_whiptail.py
tests/system/self_heal/: test_dpkg.py  test_pro_notice.py  test_safe_purge.py
