[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xed-ccc"
dynamic = ["version"]
description = "cBOX@ /Container Control — Bash-Bootstrap und Python-Werkzeug für nested LXC-Stacks (Proxmox VE 9 + Debian/Ubuntu). cBOX.at/YOU by XED.dev Tools via Collective Context (CC)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Collective Context", email = "code@collective-context.org" },
]
keywords = [
    "lxc",
    "proxmox",
    "container",
    "tui",
    "cli",
    "ccc",
    "cbox",
    "nested-lxc",
    "debian",
    "ubuntu",
    "bootstrap",
    "self-healing",
    "kaizen",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
tui = [
    "textual>=0.80",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
ccc = "ccc.cli:main"

[project.urls]
Homepage       = "https://ccc.xed.dev"
Repository     = "https://github.com/XED-dev/CCC"
"XED /Suite"   = "https://xed.dev"
Issues         = "https://github.com/XED-dev/CCC/issues"
Changelog      = "https://github.com/XED-dev/CCC/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/ccc/_version.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/ccc"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ccc",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
